--- a/src/components/Wrapper/Wrapper.css
+++ b/src/components/Wrapper/Wrapper.css
@@ -5,4 +5,9 @@
     border-radius: 10px;
     background-color: #485461;
     background-image: linear-gradient(315deg, #485461 0%, #28313b 74%);
+    /* to adjust changes from TextFit to AutoFitText */
+    /* Stacked screen from row to columns (stacked on one another) */
+    display: flex;
+    align-items: start;
+    flex-direction: column;
 }
